@@ -1,3 +1,1 @@
 # drone
-need to add --add-opens java.base/java.lang=ALL-UNNAMED
-as vm options to run on java 17
